--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,5 +2,9 @@ logbook:
   format:
     style: json
 
+logging:
+  level:
+    org.springframework.modulith: debug
+
 server:
   shutdown: immediate
