--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'liberica'
+        ref: '' # nothing, should use default
     - uses: gradle/gradle-build-action@v2
       with:
         gradle-version: wrapper
